Force odd and even module item to have a solid color to avoid the sprites to show if the item's title is long and overflows.

--- a/admin_tools/media/admin_tools/css/dashboard.css
+++ b/admin_tools/media/admin_tools/css/dashboard.css
@@ -178,11 +178,11 @@ h1.dashboard-title {
 }
 
 .dashboard-module ul li.odd {
-    background: transparent url(../images/admin-tools.png) repeat-x 0 -325px;
+    background: #f5f5f5;
 }
 
 .dashboard-module ul li.even {
-    background: transparent url(../images/admin-tools.png) repeat-x 0 -285px;
+    background: #ffffff;
 }
 
 .dashboard-module ul li a.external-link {
